--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -1,17 +1,3 @@
-.header {
-  background-color: #1921e4; /* Main color for the header */
-  padding: 20px;
-  display: flex;
-  justify-content: right; /* Center the content horizontally */
-}
-
-.nav {
-  width: 100%;
-  max-width: 1200px; /* Max width for the nav container */
-  display: flex;
-  justify-content: right; /* Center the navigation items */
-}
-
 .ul {
   list-style: none; /* Remove default list styling */
   display: flex;
@@ -26,7 +12,7 @@
   
   .link {
     text-decoration: none; /* Remove underline from links */
-    color: white; /* Text color for links */
+    color:#ffffff; /* Text color for links */
     font-weight: 500;
     font-size: 18px;
     transition: color 0.3s ease; /* Smooth transition for hover effects */
