--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -27,26 +27,12 @@ body {
     animation: blink 1s infinite;
   }
 
-  @keyframes gradient {
-    0% {
-      background-position: 0% 50%;
-    }
-    50% {
-      background-position: 100% 50%;
-    }
-    100% {
-      background-position: 0% 50%;
-    }
+  .glow-effect {
+    transition: box-shadow 0.3s ease-in-out;
+  }
+  
+  .glow-effect:hover {
+    box-shadow: 0 0 8px 2px rgb(255, 255, 255); /* #023047 in rgba format */
   }
 
-  .live-background {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: linear-gradient(270deg, #ff7e5f, #feb47b, #86a8e7, #91eae4);
-    background-size: 800% 800%;
-    animation: gradient 15s ease infinite;
-    z-index: -1;
-  }
+ 
