--- a/src/styles/Header.module.css
+++ b/src/styles/Header.module.css
@@ -40,4 +40,17 @@
   .activeLink::after {
     width: 100%; 
   }
+  .button:hover {
+    transform: scale(1.05);
+    transition: transform 1s ease, background-color 1s ease;
+  }
+  
+  .button svg {
+    transition: transform 0.3s ease;
+  }
+  
+  .button:hover svg {
+    transform: rotate(10deg); /* Slight rotation for the icon */
+  }
+  
   
